# deepin-tweak

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  README_zh_CN.md  deepin-tweak.desktop  resources.qrc  translate_generation.sh
.obs/: workflows.yml
.reuse/: dep5
debian/: changelog  control  copyright  rules
doc/: README.zh_CN.md  plugin.md  plugin.zh.md
doc/demos/org.deepin.test/: main.qml
misc/: deepin-tweak.desktop
plugins/: CMakeLists.txt
plugins/dev.myml.tweak.tasks/: Actions.qml  main.qml
plugins/dev.myml.tweak.tasks/translations/: en_US.ts
plugins/fun.tarrow.tweak.fillet/: main.qml
plugins/fun.tarrow.tweak.fillet/translations/: en_US.ts  zh_CN.ts
plugins/org.deepin.tweak.environment/: main.qml
plugins/org.deepin.tweak.environment/translations/: en_US.ts  es.ts  hu.ts  id.ts  lo.ts  ru.ts  tr.ts  uk.ts  zh_CN.ts
plugins/org.deepin.tweak.titlebar/: main.qml
plugins/org.deepin.tweak.titlebar/translations/: en_US.ts  zh_CN.ts
src/: CMakeLists.txt  main.cpp
src/main/: CMakeLists.txt  main.cpp
src/maincomponentplugin/: CMakeLists.txt  functions.cpp  functions.h  main.qml  maincomponent.qrc  maincomponentplugin.cpp  maincomponentplugin.h  plugin.json  pluginlistmodel.cpp  pluginlistmodel.h
src/maincomponentplugin/images/: lf30_editor_nia5djps.json
src/maincomponentplugin/qml/: Category.qml  CategoryModel.qml  Content.qml  MainPage.qml
src/maincomponentplugin/qml/Categories/: Application.qml  BootMenu.qml  DE.qml  Environment.qml  Index.qml  Kernel.qml  Other.qml  Welcome.qml
src/maincomponentplugin/qml/Components/: ListViewDelegate.qml  ListViewHighLight.qml
src/maincomponentplugin/qml/Utils/: qmldir  utils.qml
src/maincomponentplugin/staff/: file.cpp  file.h  gsettings.cpp  gsettings.h  launcher.cpp  launcher.h  settings.cpp  settings.h  staff.h
src/plugins/: CMakeLists.txt
src/plugins/org.deepin.tweak.titlebar/: main.qml
src/preloadplugin/: CMakeLists.txt  Preload.qml  plugin.json  preload.qrc  preloadplugin.cpp  preloadplugin.h
translations/: en_US.ts  es.ts  hu.ts  id.ts  lo.ts  pl.ts  ru.ts  ta.ts  tr.ts  uk.ts  zh_CN.ts
