# SPDX-FileCopyrightText: 2022 UnionTech Software Technology Co., Ltd.

# SPDX-License-Identifier: CC0-1.0

install(DIRECTORY org.deepin.tweak.titlebar
    DESTINATION share/deepin-tweak/plugins)
install(DIRECTORY org.deepin.tweak.environment
    DESTINATION share/deepin-tweak/plugins)
install(DIRECTORY dev.myml.tweak.tasks
    DESTINATION share/deepin-tweak/plugins)
